@@ -6,7 +6,6 @@ TOPDIR  = ../..
 include $(TOPDIR)/common.mk
 include $(TOPDIR)/pmgr.mk
 
-MACHINE = $(shell uname -m)
 OSTYPE  = $(shell uname -o | sed --e 's/GNU\///' --e 's/Linux/linux/' --e 's/Msys/windows/')
 ifneq ($(findstring Darwin,$(_DETPLAT_STR)),)
 	OSTYPE  = osx
